--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.2"
+    "nuxt": "^3.7.2",
+    "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
+    "ofetch": "^1.3.3",
+    "sass": "^1.66.1",
+    "swiper": "^10.2.0"
   }
 }
