--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --dotenv .env",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -11,11 +11,15 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "nuxt": "^3.7.2",
+    "prisma": "^5.3.0",
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
+    "@prisma/client": "^5.3.0",
+    "dotenv": "^16.3.1",
     "ofetch": "^1.3.3",
+    "pinia": "^2.1.6",
     "sass": "^1.66.1",
     "swiper": "^10.2.0"
   }
