--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
     "@prisma/client": "^5.3.0",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "ofetch": "^1.3.3",
     "pinia": "^2.1.6",
