--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
     "@prisma/client": "^5.3.0",
+    "@tiptap/pm": "^2.1.9",
+    "@tiptap/starter-kit": "^2.1.9",
+    "@tiptap/vue-3": "^2.1.9",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "ofetch": "^1.3.3",
