--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
     "@prisma/client": "^5.3.0",
+    "@tiptap/extension-bubble-menu": "^2.1.10",
+    "@tiptap/extension-code": "^2.1.10",
     "@tiptap/extension-heading": "^2.1.10",
+    "@tiptap/extension-underline": "^2.1.10",
     "@tiptap/pm": "^2.1.9",
     "@tiptap/starter-kit": "^2.1.9",
     "@tiptap/vue-3": "^2.1.9",
