--- a/package.json
+++ b/package.json
@@ -17,15 +17,31 @@
   "dependencies": {
     "@pinia/nuxt": "^0.4.11",
     "@prisma/client": "^5.3.0",
+    "@tiptap/extension-blockquote": "^2.1.11",
     "@tiptap/extension-bubble-menu": "^2.1.10",
+    "@tiptap/extension-bullet-list": "^2.1.11",
     "@tiptap/extension-code": "^2.1.10",
+    "@tiptap/extension-code-block": "^2.1.11",
+    "@tiptap/extension-code-block-lowlight": "^2.1.11",
+    "@tiptap/extension-color": "^2.1.11",
+    "@tiptap/extension-document": "^2.1.11",
+    "@tiptap/extension-dropcursor": "^2.1.11",
+    "@tiptap/extension-floating-menu": "^2.1.11",
+    "@tiptap/extension-gapcursor": "^2.1.11",
     "@tiptap/extension-heading": "^2.1.10",
+    "@tiptap/extension-history": "^2.1.11",
+    "@tiptap/extension-image": "^2.1.11",
+    "@tiptap/extension-list-item": "^2.1.11",
+    "@tiptap/extension-ordered-list": "^2.1.11",
+    "@tiptap/extension-text-align": "^2.1.11",
+    "@tiptap/extension-text-style": "^2.1.11",
     "@tiptap/extension-underline": "^2.1.10",
     "@tiptap/pm": "^2.1.9",
     "@tiptap/starter-kit": "^2.1.9",
     "@tiptap/vue-3": "^2.1.9",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
+    "lowlight": "^3.0.0",
     "ofetch": "^1.3.3",
     "pinia": "^2.1.6",
     "sass": "^1.66.1",
