--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@tiptap/vue-3": "^2.1.9",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
+    "highlight.js": "^11.8.0",
     "lowlight": "^3.0.0",
     "ofetch": "^1.3.3",
     "pinia": "^2.1.6",
