--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tiptap/pm": "^2.1.9",
     "@tiptap/starter-kit": "^2.1.9",
     "@tiptap/vue-3": "^2.1.9",
+    "axios": "^1.6.0",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "highlight.js": "^11.8.0",
