--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,11 @@
+# blog board env
+
 DATABASE_URL="postgres://{DB_NAME}:{DB_PASSWORD}@{DB_HOST}:{DB_PORT}/{USER_NAME}?schema={SCHEMA_NAME}"
+
+=========================================================================================================
+
+# 던파 env
+
 DF_URL=
 DF_API=
 DF_IMG=
