--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "ofetch": "^1.3.3",
     "pinia": "^2.1.6",
     "sass": "^1.66.1",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "typed.js": "^2.0.16"
   }
 }
