Fix: nodemailer env example

--- a/.env_example
+++ b/.env_example
@@ -9,3 +9,7 @@ DATABASE_URL="postgres://{DB_NAME}:{DB_PASSWORD}@{DB_HOST}:{DB_PORT}/{USER_NAME}
 DF_URL=
 DF_API=
 DF_IMG=
+
+# NODEMAILER AUTH
+MAIL_USER=
+MAIL_PASS=
