--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@types/nodemailer": "^6.4.14",
     "nuxt": "^3.7.2",
     "prisma": "^5.3.0",
     "tailwindcss": "^3.3.3"
@@ -44,6 +45,7 @@
     "dotenv": "^16.3.1",
     "highlight.js": "^11.8.0",
     "lowlight": "^3.0.0",
+    "nodemailer": "^6.9.7",
     "ofetch": "^1.3.3",
     "pinia": "^2.1.6",
     "sass": "^1.66.1",
