--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "pinia": "^2.1.6",
     "sass": "^1.66.1",
     "swiper": "^10.3.1",
-    "typed.js": "^2.0.16"
+    "typed.js": "^2.0.16",
+    "vue-toastification": "^2.0.0-rc.5"
   }
 }
